Move the core of NS_ConvertUCS2toUTF8 into character sinks in nsUTF8Utils.h, and use them to make ToNewUTF8String faster.  Fix bug in surrogate handling in the moved code.  Fix null-termination bug in UTF8ToNewUnicode.  b=206682  r=jag  sr=alecf  a=brendan